-added new tests -updated app.config

--- a/src/ShapeEditorLib/ShapeEditorLib.csproj
+++ b/src/ShapeEditorLib/ShapeEditorLib.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Content Include="app.config" />
+    <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IAttributeView.cs" />
