Non-working preliminary implementation of attributes

--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -84,23 +84,24 @@
     <Compile Include="Serializer\DataObjects.fs" />
     <Compile Include="Serializer\Serializer.fs" />
     <Compile Include="Serializer\Deserializer.fs" />
-    <Compile Include="CoreMetamodel\CoreMetamodelBuilder.fs" />
+    <Compile Include="CoreMetamodel\CoreMetamodelCreator.fs" />
     <Compile Include="CoreMetamodel\CoreSemanticsHelpers.fs" />
-    <Compile Include="CoreMetamodel\CoreSemantics.fs" />
-    <Compile Include="CoreMetamodel\CoreSemanticsModelCreator.fs" />
-    <Compile Include="AttributeMetamodel\AttributeMetamodelBuilder.fs" />
-    <Compile Include="AttributeMetamodel\AttributeSemantics.fs" />
-    <Compile Include="AttributeMetamodel\AttributeSemanticsModelCreator.fs" />
-    <Compile Include="DeepMetamodelLayer\DeepMetamodelBuilder.fs" />
-    <Compile Include="InfrastructureSemanticLayer.fs" />
-    <Compile Include="ModelBuilders\LanguageMetamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\InfrastructureMetamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\RobotsMetamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\RobotsTestModelBuilder.fs" />
-    <Compile Include="ModelBuilders\AirSimMetamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\AirSimModelBuilder.fs" />
-    <Compile Include="ModelBuilders\FeatureMetamodelBuilder.fs" />
-    <Compile Include="ModelBuilders\FeatureTestModelBuilder.fs" />
+    <Compile Include="CoreMetamodel\CoreMetamodelSemantics.fs" />
+    <Compile Include="CoreMetamodel\CoreSemanticsModelBuilder.fs" />
+    <Compile Include="AttributeMetamodel\AttributeMetamodelCreator.fs" />
+    <Compile Include="AttributeMetamodel\AttributeMetamodelSemantics.fs" />
+    <Compile Include="AttributeMetamodel\AttributeSemanticsHelpers.fs" />
+    <Compile Include="AttributeMetamodel\AttributeSemanticsModelBuilder.fs" />
+    <Compile Include="DeepMetamodelLayer\DeepMetamodelCreator.fs" />
+    <Compile Include="LanguageMetamodel\LanguageMetamodelCreator.fs" />
+    <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelCreator.fs" />
+    <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelSemantics.fs" />
+    <Compile Include="ModelCreators\RobotsMetamodelBuilder.fs" />
+    <Compile Include="ModelCreators\RobotsTestModelBuilder.fs" />
+    <Compile Include="ModelCreators\AirSimMetamodelBuilder.fs" />
+    <Compile Include="ModelCreators\AirSimModelBuilder.fs" />
+    <Compile Include="ModelCreators\FeatureMetamodelBuilder.fs" />
+    <Compile Include="ModelCreators\FeatureTestModelBuilder.fs" />
     <Compile Include="FacadeLayer.fs" />
     <Compile Include="FacadeLayer\Attribute.fs" />
     <Compile Include="FacadeLayer\Element.fs" />
