--- a/tests/Repo.Tests/Repo.Tests.fsproj
+++ b/tests/Repo.Tests/Repo.Tests.fsproj
@@ -84,7 +84,7 @@
     <Compile Include="CoreMetamodelTests\CoreSemanticsTests.fs" />
     <Compile Include="CoreMetamodelTests\CoreLayerInstantiationTests.fs" />
     <Compile Include="AttributeMetamodelTests\AttributeMetamodelTests.fs" />
-    <Compile Include="AttributeMetamodelTests\AttributeSemanticsTests.fs" />
+    <Compile Include="AttributeMetamodelTests\AttributeMetamodelSemanticsTests.fs" />
     <Compile Include="AttributeMetamodelTests\AttributeLayerInstantiationTests.fs" />
     <Compile Include="InfrastructureModelTests\InfrastructureSemanticLayerTests.fs" />
     <Compile Include="InfrastructureModelTests\DualInstantiationTests.fs" />
