Some required infrastructure for full stack of metamodels (prototype)

--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -93,9 +93,15 @@
     <Compile Include="AttributeMetamodel\AttributeSemanticsHelpers.fs" />
     <Compile Include="AttributeMetamodel\AttributeSemanticsModelBuilder.fs" />
     <Compile Include="DeepMetamodelLayer\DeepMetamodelCreator.fs" />
+    <Compile Include="LanguageMetamodel\Consts.fs" />
     <Compile Include="LanguageMetamodel\LanguageMetamodelCreator.fs" />
+    <Compile Include="LanguageMetamodel\LanguageMetamodelSemantics.fs" />
+    <Compile Include="LanguageMetamodel\LanguageSemanticsModelBuilder.fs" />
+    <Compile Include="InfrastructureMetamodel\Consts.fs" />
+    <Compile Include="InfrastructureMetamodel\InfrastructureMetametamodelCreator.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelCreator.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelSemantics.fs" />
+    <Compile Include="InfrastructureMetamodel\InfrastructureSemanticsModelBuilder.fs" />
     <Compile Include="ModelCreators\RobotsMetamodelCreator.fs" />
     <Compile Include="ModelCreators\RobotsTestModelCreator.fs" />
     <Compile Include="ModelCreators\AirSimMetamodelBuilder.fs" />
