--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -100,8 +100,10 @@
     <Compile Include="InfrastructureMetamodel\Consts.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetametamodelCreator.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelSemantics.fs" />
-    <Compile Include="InfrastructureMetamodel\InfrastructureSemanticsModelBuilder.fs" />
+    <Compile Include="InfrastructureMetamodel\AttributeInfo.fs" />
+    <Compile Include="InfrastructureMetamodel\Reinstantiator.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelCreator.fs" />
+    <Compile Include="InfrastructureMetamodel\InfrastructureSemanticsModelBuilder.fs" />
     <Compile Include="ModelCreators\RobotsMetamodelCreator.fs" />
     <Compile Include="ModelCreators\RobotsTestModelCreator.fs" />
     <Compile Include="ModelCreators\AirSimMetamodelBuilder.fs" />
