--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -77,6 +77,7 @@
     <Compile Include="DataLayer\DataEdge.fs" />
     <Compile Include="DataLayer\DataAssociation.fs" />
     <Compile Include="DataLayer\DataGeneralization.fs" />
+    <Compile Include="DataLayer\DataInstanceOf.fs" />
     <Compile Include="DataLayer\DataNode.fs" />
     <Compile Include="DataLayer\DataModel.fs" />
     <Compile Include="DataLayer\DataRepo.fs" />
