Even more epic refactoring, aims to implement proper layering of metamodel layers, also introduces Basic Metamodel

--- a/src/Repo/Repo.fsproj
+++ b/src/Repo/Repo.fsproj
@@ -72,23 +72,22 @@
     <Compile Include="Properties\AssemblyInfo.fs" />
     <Compile Include="Exceptions.fs" />
     <Compile Include="Helpers.fs" />
-    <Compile Include="DataLayer\DataLayer.fs" />
-    <Compile Include="DataLayer\DataElement.fs" />
-    <Compile Include="DataLayer\DataEdge.fs" />
-    <Compile Include="DataLayer\DataAssociation.fs" />
-    <Compile Include="DataLayer\DataGeneralization.fs" />
-    <Compile Include="DataLayer\DataInstanceOf.fs" />
-    <Compile Include="DataLayer\DataNode.fs" />
-    <Compile Include="DataLayer\DataModel.fs" />
-    <Compile Include="DataLayer\DataRepo.fs" />
-    <Compile Include="DataLayer\IModelBuilder.fs" />
+    <Compile Include="BasicMetamodel\BasicMetamodel.fs" />
+    <Compile Include="BasicMetamodel\DataObjects\DataElement.fs" />
+    <Compile Include="BasicMetamodel\Details\DataEdge.fs" />
+    <Compile Include="BasicMetamodel\Details\DataNode.fs" />
+    <Compile Include="BasicMetamodel\Details\DataRepo.fs" />
+    <Compile Include="BasicMetamodel\DataObjects\DataEdge.fs" />
+    <Compile Include="BasicMetamodel\BasicMetamodelRepoFactory.fs" />
     <Compile Include="Serializer\DataObjects.fs" />
     <Compile Include="Serializer\Serializer.fs" />
     <Compile Include="Serializer\Deserializer.fs" />
-    <Compile Include="CoreMetamodel\CoreMetamodelCreator.fs" />
-    <Compile Include="CoreMetamodel\CoreSemanticsHelpers.fs" />
-    <Compile Include="CoreMetamodel\CoreMetamodelSemantics.fs" />
-    <Compile Include="CoreMetamodel\CoreSemanticsModelBuilder.fs" />
+    <Compile Include="CoreMetamodel\CoreMetamodel.fs" />
+    <Compile Include="CoreMetamodel\Details\CoreMetamodelCreator.fs" />
+    <Compile Include="CoreMetamodel\Details\CoreSemanticsHelpers.fs" />
+    <Compile Include="CoreMetamodel\Details\CoreMetamodelSemantics.fs" />
+    <Compile Include="CoreMetamodel\Details\CoreSemanticsModelBuilder.fs" />
+    <Compile Include="CoreMetamodel\Details\DataModel.fs" />
     <Compile Include="AttributeMetamodel\AttributeMetamodelCreator.fs" />
     <Compile Include="AttributeMetamodel\Semantics\AttributeSemantics.fs" />
     <Compile Include="AttributeMetamodel\Semantics\ElementSemantics.fs" />
@@ -102,7 +101,6 @@
     <Compile Include="LanguageMetamodel\Semantics\LanguageMetamodelSemantics.fs" />
     <Compile Include="LanguageMetamodel\LanguageSemanticsModelBuilder.fs" />
     <Compile Include="InfrastructureMetamodel\Consts.fs" />
-    <Compile Include="InfrastructureMetamodel\InfrastructureMetametamodelCreator.fs" />
     <Compile Include="InfrastructureMetamodel\AttributeInfo.fs" />
     <Compile Include="InfrastructureMetamodel\Reinstantiator.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureMetamodelCreator.fs" />
@@ -111,6 +109,7 @@
     <Compile Include="InfrastructureMetamodel\Semantics\ModelSemantics.fs" />
     <Compile Include="InfrastructureMetamodel\Semantics\InstantiationSemantics.fs" />
     <Compile Include="InfrastructureMetamodel\InfrastructureSemanticsModelBuilder.fs" />
+    <Compile Include="InfrastructureMetamodel\Copy of InfrastructureMetametamodelCreator.fs" />
     <Compile Include="ModelCreators\RobotsMetamodelCreator.fs" />
     <Compile Include="ModelCreators\RobotsTestModelCreator.fs" />
     <Compile Include="ModelCreators\AirSimMetamodelBuilder.fs" />
