- commit before merge

--- a/src/ShapeEditorLib/ShapeEditorLib.csproj
+++ b/src/ShapeEditorLib/ShapeEditorLib.csproj
@@ -66,6 +66,7 @@
       <Name>Repo</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.6.1'">
